--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,3 @@
-
 <!-- Main Section -->
 <div id="main" class="flex items-center justify-center h-screen bg-cover bg-center" style="background-image: url(/images/agno1.jpg);">
     <div class="w-full h-full flex flex-col items-center justify-center bg-black bg-opacity-50 text-center text-white p-10">
@@ -21,254 +20,54 @@
         <div class="w-full bg-white p-5 shadow-lg overflow-y-scroll h-screen">
             <h2 class="text-5xl font-bold mb-5 text-center">Featured Establishments</h2>
             <div class="space-y-5">
-                <!-- Establishment Card 1 -->
+                {{#each establishments}}
                 <div class="flex flex-col bg-white rounded-lg shadow-lg overflow-hidden transition-transform transform hover:-translate-y-1">
-                    <img src="24chicken.jpg" class="w-full h-64 object-cover">
+                    <img src="{{this.mainImage}}" class="w-full h-64 object-cover">
                     <div class="p-5">
                         <div class="flex items-center text-sm text-gray-500 mb-2">
                             <div class="text-yellow-400 text-2xl mr-2">
                                 &#9733
                             </div>
-                            <span class="mr-1">4.5</span>
-                            <span>(100 reviews)</span>
+                            <span class="mr-1">{{this.rating}}</span>
+                            <span>({{this.reviewsCount}} reviews)</span>
                         </div>
-                        <h3 class="text-xl font-bold mb-2">24 Chicken</h3>
-                        <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <h3 class="text-xl font-bold mb-2">{{this.name}}</h3>
+                        <p class="text-gray-700">{{this.description}}</p>
                     </div>
                 </div>
-                <!-- Establishment Card 2 -->
-                <div class="flex flex-col bg-white rounded-lg shadow-lg overflow-hidden transition-transform transform hover:-translate-y-1">
-                    <img src="bacsilog.jpg" class="w-full h-64 object-cover">
-                    <div class="p-5">
-                        <div class="flex items-center text-sm text-gray-500 mb-2">
-                            <div class="text-yellow-400 text-2xl mr-2">
-                                &#9733
-                            </div>
-                            <span class="mr-1">4.3</span>
-                            <span>(80 reviews)</span>
-                        </div>
-                        <h3 class="text-xl font-bold mb-2">Ate Rica's Bacsilog</h3>
-                        <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    </div>
-                </div>
-                <!-- Establishment Card 3 -->
-                <div class="flex flex-col bg-white rounded-lg shadow-lg overflow-hidden transition-transform transform hover:-translate-y-1">
-                    <img src="mongolian.jpg" class="w-full h-64 object-cover">
-                    <div class="p-5">
-                        <div class="flex items-center text-sm text-gray-500 mb-2">
-                            <div class="text-yellow-400 text-2xl mr-2">
-                                &#9733
-                            </div>
-                            <span class="mr-1">4.3</span>
-                            <span>(80 reviews)</span>
-                        </div>
-                        <h3 class="text-xl font-bold mb-2">Mongolian Master</h3>
-                        <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    </div>
-                </div>
-                <!-- Establishment Card 4 -->
-                <div class="flex flex-col bg-white rounded-lg shadow-lg overflow-hidden transition-transform transform hover:-translate-y-1">
-                    <img src="prelude.jpg" class="w-full h-64 object-cover">
-                    <div class="p-5">
-                        <div class="flex items-center text-sm text-gray-500 mb-2">
-                            <div class="text-yellow-400 text-2xl mr-2">
-                                &#9733
-                            </div>
-                            <span class="mr-1">4.3</span>
-                            <span>(80 reviews)</span>
-                        </div>
-                        <h3 class="text-xl font-bold mb-2">Prelude Cafe</h3>
-                        <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    </div>
-                </div>
-                <!-- Establishment Card 5 -->
-                <div class="flex flex-col bg-white rounded-lg shadow-lg overflow-hidden transition-transform transform hover:-translate-y-1">
-                    <img src="subway.jpeg" class="w-full h-64 object-cover">
-                    <div class="p-5">
-                        <div class="flex items-center text-sm text-gray-500 mb-2">
-                            <div class="text-yellow-400 text-2xl mr-2">
-                                &#9733
-                            </div>
-                            <span class="mr-1">4.3</span>
-                            <span>(80 reviews)</span>
-                        </div>
-                        <h3 class="text-xl font-bold mb-2">Subway</h3>
-                        <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    </div>
-                </div>
+                {{/each}}
             </div>
         </div>
         <!-- Recent Reviews -->
         <div class="w-full md:w-1/2 bg-white p-5 shadow-lg overflow-y-scroll h-screen">
             <h2 class="text-center text-5xl font-bold mb-5">Recent Reviews</h2>
             <div class="space-y-5">
-                <!-- Review Card 1 -->
+                {{#each reviews}}
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden transition-transform transform hover:-translate-y-1 p-5">
                     <div class="flex items-center justify-between mb-5">
-                        <!--Review Header-->
                         <div class="flex items-center">
-                            <img src="profile1.jpg" class="w-12 h-12 rounded-full mr-3">
+                            <img src="/uploads/{{this.user.avatar}}" class="w-12 h-12 rounded-full mr-3">
                             <div>
-                                <b class="text-lg">John Doe</b>
-                                <p class="text-sm mt-0 text-gray-500">June 7, 2024</p>
+                                <b class="text-lg">{{this.user.username}}</b>
+                                <p class="text-sm mt-0 text-gray-500">{{this.date}}</p>
                             </div>
                         </div>
                         <div class="flex items-center text-xl">
                             <div class="text-yellow-400 text-4xl mr-2">
                                 &#9733
                             </div>
-                            <span class="mt-1">4</span>
+                            <span class="mt-1">{{this.rating}}</span>
                         </div>
                     </div>
-                    <h4 class="text-xl font-bold mb-2">24 Chicken</h4>
-                    <p class="text-gray-700 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <h4 class="text-xl font-bold mb-2">{{this.establishment.name}}</h4>
+                    <p class="text-gray-700 mb-5">{{this.comment}}</p>
                     <div class="flex justify-between items-center">
                         <div class="flex items-center space-x-5">
-                            <button type="button" class="flex items-center text-green-600">
-                                <img src="like.png" class="w-5 h-5 mr-1">
-                                <span>12</span>
-                            </button>
-                            <button type="button" class="flex items-center text-red-600">
-                                <img src="dislike.png" class="w-5 h-5 mr-1">
-                                <span>1</span>
-                            </button>
                         </div>
                     </div>
                 </div>
-                <!-- Review Card 2 -->
-                <div class="bg-white rounded-lg shadow-lg overflow-hidden transition-transform transform hover:-translate-y-1 p-5">
-                    <div class="flex items-center justify-between mb-5">
-                        <!--Review Header-->
-                        <div class="flex items-center">
-                            <img src="profile1.jpg" class="w-12 h-12 rounded-full mr-3">
-                            <div>
-                                <b class="text-lg">Florence Pugh</b>
-                                <p class="text-sm mt-0 text-gray-500">June 6, 2024</p>
-                            </div>
-                        </div>
-                        <div class="flex items-center text-xl">
-                            <div class="text-yellow-400 text-4xl mr-2">
-                                &#9733
-                            </div>
-                            <span class="mt-1">5</span>
-                        </div>
-                    </div>
-                    <h4 class="text-xl font-bold mb-2">Ate Rica's Bacsilog</h4>
-                    <p class="text-gray-700 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <div class="flex justify-between items-center">
-                        <div class="flex items-center space-x-5">
-                            <button type="button" class="flex items-center text-green-600">
-                                <img src="like.png" class="w-5 h-5 mr-1">
-                                <span>10</span>
-                            </button>
-                            <button type="button" class="flex items-center text-red-600">
-                                <img src="dislike.png" class="w-5 h-5 mr-1">
-                                <span>4</span>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <!-- Review Card 3 -->
-                <div class="bg-white rounded-lg shadow-lg overflow-hidden transition-transform transform hover:-translate-y-1 p-5">
-                    <div class="flex items-center justify-between mb-5">
-                        <!--Review Header-->
-                        <div class="flex items-center">
-                            <img src="profile1.jpg" class="w-12 h-12 rounded-full mr-3">
-                            <div>
-                                <b class="text-lg">Luka Doncic</b>
-                                <p class="text-sm mt-0 text-gray-500">June 5, 2024</p>
-                            </div>
-                        </div>
-                        <div class="flex items-center text-xl">
-                            <div class="text-yellow-400 text-4xl mr-2">
-                                &#9733
-                            </div>
-                            <span class="mt-1">4</span>
-                        </div>
-                    </div>
-                    <h4 class="text-xl font-bold mb-2">Mongolian Master</h4>
-                    <p class="text-gray-700 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <div class="flex justify-between items-center">
-                        <div class="flex items-center space-x-5">
-                            <button type="button" class="flex items-center text-green-600">
-                                <img src="like.png" class="w-5 h-5 mr-1">
-                                <span>7</span>
-                            </button>
-                            <button type="button" class="flex items-center text-red-600">
-                                <img src="dislike.png" class="w-5 h-5 mr-1">
-                                <span>7</span>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <!-- Review Card 4 -->
-                <div class="bg-white rounded-lg shadow-lg overflow-hidden transition-transform transform hover:-translate-y-1 p-5">
-                    <div class="flex items-center justify-between mb-5">
-                        <!--Review Header-->
-                        <div class="flex items-center">
-                            <img src="profile1.jpg" class="w-12 h-12 rounded-full mr-3">
-                            <div>
-                                <b class="text-lg">Timothee Chalamet</b>
-                                <p class="text-sm mt-0 text-gray-500">June 3, 2024</p>
-                            </div>
-                        </div>
-                        <div class="flex items-center text-xl">
-                            <div class="text-yellow-400 text-4xl mr-2">
-                                &#9733
-                            </div>
-                            <span class="mt-1">5</span>
-                        </div>
-                    </div>
-                    <h4 class="text-xl font-bold mb-2">24 Chicken</h4>
-                    <p class="text-gray-700 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <div class="flex justify-between items-center">
-                        <div class="flex items-center space-x-5">
-                            <button type="button" class="flex items-center text-green-600">
-                                <img src="like.png" class="w-5 h-5 mr-1">
-                                <span>6</span>
-                            </button>
-                            <button type="button" class="flex items-center text-red-600">
-                                <img src="dislike.png" class="w-5 h-5 mr-1">
-                                <span class="mt-1">2</span>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <!-- Review Card 5 -->
-                <div class="bg-white rounded-lg shadow-lg overflow-hidden transition-transform transform hover:-translate-y-1 p-5">
-                    <div class="flex items-center justify-between mb-5">
-                        <!--Review Header-->
-                        <div class="flex items-center">
-                            <img src="profile1.jpg" class="w-12 h-12 rounded-full mr-3">
-                            <div>
-                                <b class="text-lg">Kenny Omega</b>
-                                <p class="text-sm mt-0 text-gray-500">June 1, 2024</p>
-                            </div>
-                        </div>
-                        <div class="flex items-center text-xl">
-                            <div class="text-yellow-400 text-4xl mr-2">
-                                &#9733
-                            </div>
-                            <span class="mt-1">5</span>
-                        </div>
-                    </div>
-                    <h4 class="text-xl font-bold mb-2">Brother's Burger</h4>
-                    <p class="text-gray-700 mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <div class="flex justify-between items-center">
-                        <div class="flex items-center space-x-5">
-                            <button type="button" class="flex items-center text-green-600">
-                                <img src="like.png" class="w-5 h-5 mr-1">
-                                <span>10</span>
-                            </button>
-                            <button type="button" class="flex items-center text-red-600">
-                                <img src="dislike.png" class="w-5 h-5 mr-1">
-                                <span>0</span>
-                            </button>
-                        </div>
-                    </div>
-                </div>
+                {{/each}}
             </div>
         </div>
     </div>
 </div>
-
