--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,33 +1,28 @@
 
-<div id="main" class="main-content-white" >
-    <div class="min-h-screen flex flex-col justify-center items-center flex items-center justify-center h-screen bg-cover bg-center" style="background-image: url(/images/agno1.jpg);">
-      <div class="w-full h-full flex flex-col items-center justify-center bg-black bg-opacity-50 text-center text-white p-10">
-        <div class="bg-white p-8 rounded shadow-md w-96 border-4 border-green-900">
-          <h2 class="text-2xl font-semibold text-center mb-2 text-black">Welcome to Tafteria!</h2>
-          <p class="text-gray-500 text-sm text-center mb-4">Please log in</p>
-          <form action="/login" method="POST">
+<div class="w-full bg-yellow-50 min-h-screen flex flex-col items-center justify-center py-16 px-4">
+    <div class="bg-white p-8 rounded shadow-md w-full max-w-md border-4 border-green-900">
+        <h2 class="text-2xl font-semibold text-center mb-2 text-black">Welcome to Tafteria!</h2>
+        <p class="text-gray-500 text-sm text-center mb-4">Please log in</p>
+        <form action="/login" method="POST">
             <div class="mb-4">
-              <label for="username" class="block text-gray-700 text-sm font-bold mb-2">Username:</label>
-              <input type="text" id="username" name="username" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline" required>
+                <label for="username" class="block text-gray-700 text-sm font-bold mb-2">Username:</label>
+                <input type="text" id="username" name="username" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline" required>
             </div>
             <div class="mb-4">
-              <label for="password" class="block text-gray-700 text-sm font-bold mb-2">Password:</label>
-              <input type="password" id="password" name="password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline" required>
+                <label for="password" class="block text-gray-700 text-sm font-bold mb-2">Password:</label>
+                <input type="password" id="password" name="password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline" required>
             </div>
             <div class="flex items-center mb-4">
-              <input id="remember" type="checkbox" name="remember" class="form-checkbox h-4 w-4">
-              <label for="remember" class="ml-2 block text-sm text-gray-700">Remember Login</label>
+                <input id="remember" type="checkbox" name="remember" class="form-checkbox h-4 w-4">
+                <label for="remember" class="ml-2 block text-sm text-gray-700">Remember Login</label>
             </div>
             <button type="submit" class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
-              Login
+                Login
             </button>
             <p class="mt-4 text-center text-sm text-gray-700">
-              Need an account? 
-              <a href="/register" class="text-blue-500 hover:underline">Register</a>
+                Need an account? 
+                <a href="/register" class="text-blue-500 hover:underline">Register</a>
             </p>
-          </form>
-        </div>
-      </div> 
+        </form>
     </div>
-  </div>
 </div>
