--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,89 +1,81 @@
-<div class="bg-gray-100 leading-normal tracking-normal">
-    <!-- Main Content -->
-    <div id="main" class="flex flex-col items-center justify-center min-h-screen bg-gray-100 bg-cover bg-center" style="background-image: url(/images/agno1.jpg);">
-        <div class="w-full h-screen flex flex-col items-center justify-center bg-black bg-opacity-50 text-black p-10">
-            <div class="bg-white shadow-md rounded-lg p-6 w-full max-w-4xl overflow-y-scroll">
-                <div class="flex justify-between items-center mb-4">
-                    <h1 class="text-2xl font-bold mb-4">User Profile</h1>
-                    <button id="editProfileBtn" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-6 rounded mb-2">Edit Profile</button>
+<div class="w-full bg-yellow-50 min-h-screen flex flex-col items-center py-16 px-4">
+    <div class="bg-white shadow-md rounded-lg p-6 w-full max-w-4xl overflow-y-scroll">
+        <div class="flex justify-between items-center mb-4">
+            <h1 class="text-2xl font-bold mb-4">User Profile</h1>
+            <button id="editProfileBtn" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-6 rounded mb-2">Edit Profile</button>
+        </div>
+        <div id="editProfileForm" class="hidden mb-6">
+            <form action="/profile/edit" method="POST" enctype="multipart/form-data">
+                <div class="mb-4">
+                    <label for="avatar" class="block text-gray-700 text-sm font-bold mb-2">Avatar:</label>
+                    <input type="file" id="avatar" name="avatar" accept="image/*" class="block w-full text-sm text-gray-900 border border-gray-300 cursor-pointer bg-gray-50">
                 </div>
-                <div id="editProfileForm" class="hidden mb-6">
-                    <form action="/profile/edit" method="POST" enctype="multipart/form-data">
-                        <div class="mb-4">
-                            <label for="avatar" class="block text-gray-700 text-sm font-bold mb-2">Avatar:</label>
-                            <input type="file" id="avatar" name="avatar" accept="image/*" class="block w-full text-sm text-gray-900 border border-gray-300 cursor-pointer bg-gray-50">
-                        </div>
-                        <div class="mb-4">
-                            <label for="description" class="block text-gray-700 text-sm font-bold mb-2">Short Description:</label>
-                            <textarea id="description" name="description" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline" rows="3">{{user.description}}</textarea>
-                        </div>
-                        <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
-                            Save Changes
-                        </button>
-                    </form>
+                <div class="mb-4">
+                    <label for="description" class="block text-gray-700 text-sm font-bold mb-2">Short Description:</label>
+                    <textarea id="description" name="description" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline" rows="3">{{user.description}}</textarea>
                 </div>
-                <div class="flex items-center mb-6">
-                    <img src="/uploads/{{user.avatar}}" alt="User Profile Picture" class="rounded-full w-32 h-32 object-cover mr-4"> <!-- Avatar -->
-                    <div class="w-1/3">
-                        <h2 class="text-xl font-semibold">{{user.username}}</h2> <!-- Username -->
-                        <p class="text-gray-600">{{user.description}}</p> <!-- Description -->
-                        <p class="text-gray-600">Joined on {{user.joinedDate}}</p> <!-- Joined Date -->
-                    </div>
-                </div>
-                <div class="flex justify-between items-center mb-4">
-                    <h2 class="text-xl font-semibold">Review History</h2>
-                    <!-- "Write Review" Button -->
-                    <div>
-                        <a class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded" href="/establishments">Write Review</a>
-                    </div>
-                </div>
-                <!-- Reviews -->
-                {{#each reviews}}
-                <div class="bg-white rounded-lg shadow-lg p-6 mb-4">
-                    <div class="flex justify-between items-center mb-2">
-                        <h1 class="text-2xl font-semibold mb-2">{{this.establishment.name}}</h1>
-                    </div>
-                    <div class="flex items-center mb-2">
-                        {{#times this.rating}}
-                        <span class="text-yellow-500"><i class="fa fa-star"></i></span>
-                        {{/times}}
-                        {{#times (sub 5 this.rating)}}
-                        <span class="text-gray-400"><i class="fa fa-star"></i></span>
-                        {{/times}}
-                    </div>
-                    <p class="text-gray-700">{{this.comment}}</p>
-                    <p class="text-gray-600 text-sm mt-2 mb-5">Reviewed on {{this.date}}</p>
-                    <div class="flex justify-between items-center">
-                        <div class="flex items-center space-x-5">
-                            <button type="button" class="flex items-center text-green-600">
-                                <img src="/images/like.png" class="w-5 h-5 mr-1">
-                                <span>{{this.likes}}</span>
-                            </button>
-                            <button type="button" class="flex items-center text-red-600">
-                                <img src="/images/dislike.png" class="w-5 h-5 mr-1">
-                                <span>{{this.dislikes}}</span>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                {{/each}}
+                <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+                    Save Changes
+                </button>
+            </form>
+        </div>
+        <div class="flex items-center mb-6">
+            <img src="/uploads/{{user.avatar}}" alt="User Profile Picture" class="rounded-full w-32 h-32 object-cover mr-4"> <!-- Avatar -->
+            <div class="w-1/3">
+                <h2 class="text-xl font-semibold">{{user.username}}</h2> <!-- Username -->
+                <p class="text-gray-600">{{user.description}}</p> <!-- Description -->
+                <p class="text-gray-600">Joined on {{user.joinedDate}}</p> <!-- Joined Date -->
             </div>
         </div>
+        <div class="flex justify-between items-center mb-4">
+            <h2 class="text-xl font-semibold">Review History</h2>
+            <!-- "Write Review" Button -->
+            <div>
+                <a class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded" href="/establishments">Write Review</a>
+            </div>
+        </div>
+        <!-- Reviews -->
+        {{#each reviews}}
+        <div class="bg-white rounded-lg shadow-lg p-6 mb-4">
+            <div class="flex justify-between items-center mb-2">
+                <h1 class="text-2xl font-semibold mb-2">{{this.establishment.name}}</h1>
+            </div>
+            <div class="flex items-center mb-2">
+                {{#times this.rating}}
+                <span class="text-yellow-500"><i class="fa fa-star"></i></span>
+                {{/times}}
+                {{#times (sub 5 this.rating)}}
+                <span class="text-gray-400"><i class="fa fa-star"></i></span>
+                {{/times}}
+            </div>
+            <p class="text-gray-700">{{this.comment}}</p>
+            <p class="text-gray-600 text-sm mt-2 mb-5">Reviewed on {{this.date}}</p>
+            <div class="flex justify-between items-center">
+                <div class="flex items-center space-x-5">
+                    <button type="button" class="flex items-center text-green-600">
+                        <img src="/images/like.png" class="w-5 h-5 mr-1">
+                        <span>{{this.likes}}</span>
+                    </button>
+                    <button type="button" class="flex items-center text-red-600">
+                        <img src="/images/dislike.png" class="w-5 h-5 mr-1">
+                        <span>{{this.dislikes}}</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        {{/each}}
     </div>
 </div>
-
 <script>
     document.addEventListener('DOMContentLoaded', () => {
         const editProfileBtn = document.getElementById('editProfileBtn');
         const editProfileForm = document.getElementById('editProfileForm');
-
         if (editProfileBtn && editProfileForm) {
             editProfileBtn.addEventListener('click', () => {
                 editProfileForm.classList.toggle('hidden');
             });
         }
     });
-
     function toggleEditProfileForm() {
         const form = document.getElementById('editProfileForm');
         if (form.classList.contains('hidden')) {
