--- a/views/home.hbs
+++ b/views/home.hbs
@@ -63,6 +63,15 @@
                 </div>
                 <h4 class="text-xl font-bold mb-2 text-gray-800">{{this.establishment.name}}</h4>
                 <p class="text-gray-700 mb-4">{{this.comment}}</p>
+                {{#if this.photos}}
+                <div class="mt-3">
+                    <div class="flex gap-2 overflow-x-auto">
+                        {{#each this.photos}}
+                        <img src="/uploads/{{this}}" alt="Review photo" class="w-20 h-20 object-cover rounded-lg">
+                        {{/each}}
+                    </div>
+                </div>
+                {{/if}}
             </div>
             {{/each}}
         </div>
